--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,7 +3,7 @@ collections_path =/home/rhel/collections
 
 roles_path = /home/rhel/roles
 
-inventory =/home/rhel/inventory
+inventory =/home/rhel/BuildCollection/inventory.txt
 
 ask_pass=False
 
